tests/compose_backend_fail/duplicate_route.stderr
error: method `blit` routed more than once (also at earlier position)
  --> tests/compose_backend_fail/duplicate_route.rs:26:9
   |
26 |         blit => sw,
   |         ^^^^

error[E0050]: method `blit` has 7 parameters but the declaration in trait `blit` has 9
  --> tests/compose_backend_fail/duplicate_route.rs:12:13
   |
12 |     fn blit(&mut self, _: &Texture, _: &Rect, _: Point, _: Point, _: &Rect, _: u8) {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected 9 parameters, found 7
   |
   = note: `blit` from trait: `fn(&mut Self, &Texture<'_>, &Rect, Point, Point, &Rect, u8, Fixed, CompositeMode)`
